--- a/client/package.json
+++ b/client/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "webpack": "^5.68.0"
+    "webpack": "^5.68.0",
+    "husky": "^7.0.0"
   }
 }
