--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -26,6 +26,7 @@
     "comma-dangle": "off",
     "linebreak-style": "off",
     "react/prop-types": "off",
+    "react/jsx-no-bind": "off",
     "consistent-return": "off",
     "no-param-reassign": "off",
     "no-nested-ternary": "off",
