--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -41,6 +41,7 @@
     "import/no-unresolved": "off",
     "no-use-before-define": "off",
     "object-curly-newline": "off",
+    "prefer-arrow-callback": "off",
     "implicit-arrow-linebreak": "off",
     "react/jsx-wrap-multilines": "off",
     "react/react-in-jsx-scope": "off",
