--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,3 @@
-PORT=3000
-REACT_APP_FRONTEND_LOCAL_URL="http://localhost:3000/"
-REACT_APP_FRONTEND_STAGING_URL=""
-REACT_APP_SERVER_LOCAL_URL=""
-REACT_APP_FRONTEND_STAGING_URL=""
+REACT_APP_CLIENT_URL=""
+REACT_APP_SERVER_URL=""
+REACT_APP_API_BASE_URL=""
