--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -13,18 +13,23 @@
     },
     "ecmaVersion": "latest"
   },
+  "globals": {
+    "BodyInit": false
+  },
   "plugins": ["react", "jest", "@typescript-eslint"],
   "rules": {
     "eqeqeq": "off",
     "no-var": "off",
     "no-proto": "off",
     "camelcase": "off",
+    "wrap-iife": "off",
     "no-shadow": "off",
     "no-console": "off",
     "prefer-const": "off",
     "no-plusplus": "off",
     "import/order": "off",
     "comma-dangle": "off",
+    "no-return-await": "off",
     "linebreak-style": "off",
     "react/prop-types": "off",
     "react/jsx-no-bind": "off",
@@ -41,6 +46,7 @@
     "import/no-unresolved": "off",
     "no-use-before-define": "off",
     "object-curly-newline": "off",
+    "function-paren-newline": "off",
     "prefer-arrow-callback": "off",
     "implicit-arrow-linebreak": "off",
     "react/jsx-wrap-multilines": "off",
@@ -64,7 +70,7 @@
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
-    "max-len": ["error", { "code": 150, "tabWidth": 2 }],
+    "max-len": ["error", { "code": 100, "tabWidth": 2 }],
     "import/extensions": ["off", "always", { "ignorePackages": true }],
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
   }
