--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.12",
+    "react-query": "^3.34.16",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
@@ -30,6 +29,7 @@
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.18",
+    "@types/node": "^16.11.26",
     "@types/styled-components": "^5.1.22",
     "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -40,8 +40,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "webpack": "^5.68.0",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "webpack": "^5.68.0"
   },
   "scripts": {
     "server": "nodemon ../../../server/src/index.js",
