--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,9 @@
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "husky": "^7.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "2.5.1",
-    "husky": "^7.0.0"
+    "prettier": "2.5.1"
   },
   "dependencies": {
     "dotenv": "^14.3.2",
