--- a/client/package.json
+++ b/client/package.json
@@ -29,13 +29,16 @@
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.18",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.26",
     "@types/styled-components": "^5.1.22",
     "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "cypress": "^9.5.1",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
@@ -57,6 +60,8 @@
     "y:pret": "yarn prettier --write .",
     "sb:start": "start-storybook -p 6006 -s public",
     "sb:build": "build-storybook -s public",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
     "clean:cache": "npm cache clean --force",
     "prepare": "husky install"
   },
